fix overflow

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -73,7 +73,7 @@
 //         }
 //     }
 // }
-header{
+aside{
     height: 100vh;
     width: 15%;
     background-color: $primary_background_color;
